# user-segmentation-system-poc

./: .gitignore  .npmignore  LICENSE  README.md  User-segment-system-apis.postman_collection.json  docker-compose.yaml  env.sampe  minio-health-check.sh  notes.md
configuration-api-srv/: .dockerignore  Dockerfile  package.json
configuration-api-srv/prisma/: schema.prisma  seed.ts
configuration-api-srv/src/: index.ts
configuration-api-srv/src/controllers/: activities.controller.ts  dbActions.controller.ts  index.ts  segments.controller.ts  users.controller.ts
configuration-api-srv/src/routes/: activities.router.ts  dbActions.router.ts  index.ts  segments.router.ts  users.router.ts
diagrams/: configuration_DB_ERD.drawio  user-segment-system-poc.drawio
ingestion-api-srv/: Cargo.toml  Dockerfile
ingestion-api-srv/src/: main.rs
ingestion-api-srv/src/controllers/: api.rs
ingestion-api-srv/src/helpers/: connection_pool.rs  mod.rs  producers.rs  prometheus.rs
ingestion-api-srv/src/models/: mod.rs
ingestion-api-srv/src/routes/: api.rs  metrics.rs  mod.rs
ingestion-api-srv/src/servers/: api.rs  metrics.rs  mod.rs
segment-users-srv/: .dockerignore  Cargo.toml  Dockerfile
segment-users-srv/src/: main.rs
segment-users-srv/src/consumers/: mod.rs
segment-users-srv/src/helpers/: connection_pool.rs  mod.rs  producers.rs
segment-users-srv/src/models/: mod.rs
segment-users-srv/src/routes/: metrics.rs
segment-users-srv/src/servers/: metrics.rs
segment-users-srv/src/services/: mod.rs
(+1 files in other folders)
