[package]
name = "ingestion-api-srv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
databend-driver = "0.9.4"
axum = "0.6.20"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3.9"
tracing-futures = "0.2"
tokio-stream = "0.1.12"
dotenv = "0.15.0"
uuid = { version = "1.5.0", features = ["v4"] }
axum-prometheus = "0.4.0"
metrics = "0.21.0"
once_cell = "1.8.0"
mobc = "0.8.3"
async-trait = "0.1.74"
serde_json = "1.0.108"
chrono = "0.4.31"
rdkafka = { version = "0.34.0", features = ["cmake-build"] }
openssl = { version = "0.10.57" }
